<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TeamNameStyle"
                android:text="@string/team_a_header" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/ScoreStyle"
                android:text="@string/team_a_score_text_view" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addSixPointsToTeamAScore"
                android:text="@string/add_6_points_button" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addThreePointsToTeamAScore"
                android:text="@string/add_3_points_button" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addTwoPointsToTeamAScore"
                android:text="@string/add_2_points_button" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addOnePointToTeamAScore"
                android:text="@string/add_1_point_button" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/one_dip"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/twenty_four_dip_margin"
            android:background="@color/divider_color" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TeamNameStyle"
                android:text="@string/team_b_header" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/ScoreStyle"
                android:text="@string/team_b_score_text_view" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addSixPointsToTeamBScore"
                android:text="@string/add_6_points_button" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addThreePointsToTeamBScore"
                android:text="@string/add_3_points_button" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addTwoPointsToTeamBScore"
                android:text="@string/add_2_points_button" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addOnePointToTeamBScore"
                android:text="@string/add_1_point_button" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/thirty_two_dip_margin"
        android:onClick="resetScore"
        android:text="@string/resetButton" />
</RelativeLayout>